# regrader

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build32.bat  build_au.sh
audio-unit/: audiounitconfig.h
auwrapper/: CMakeLists.txt  Info.plist  audiounitconfig.h  auresource.r  doc.cpp
auwrapper/config/: regrader.xcconfig  regrader_debug.xcconfig  regrader_release.xcconfig
mac/: Info.plist  PkgInfo
mac/audio-unit/: CMakeLists.txt  audiounitconfig.h
mac/audio-unit/resource/: Info.plist
resource/: plugin.rc  plugin.uidesc  regrader.rc  regrader.uidesc
resource/src/: plugin_design.psd
resources/graphics/: regrader.rc  regrader.uidesc
resources/graphics/src/: plugin_design.psd
src/: audiobuffer.cpp  audiobuffer.h  bitcrusher.cpp  bitcrusher.h  decimator.cpp  decimator.h  filter.cpp  filter.h  flanger.cpp  flanger.h  formantfilter.cpp  formantfilter.h  global.h  lfo.cpp  lfo.h  limiter.cpp  limiter.h  lowpassfilter.cpp  lowpassfilter.h  paramids.h  regrader.cpp  regrader.h  regraderprocess.cpp  regraderprocess.h  regraderprocess_template.h  util.h  version.h  vst.cpp  vst.h  vstentry.cpp  vstentry_vst2.cpp
src/ui/: controller.cpp  controller.h  uimessagecontroller.h
